--- a/server/package.json
+++ b/server/package.json
@@ -19,14 +19,20 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "docxtemplater": "^3.65.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.1",
+    "multer": "^2.0.1",
+    "pizzip": "^3.2.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.51"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.15.29",
     "esbuild": "^0.25.5",
     "npm-run-all": "^4.1.5",
