--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,11 @@
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
+    "openai": "^5.5.1",
     "pizzip": "^3.2.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.51"
+    "zod": "^3.25.51",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
